--- a/index.html
+++ b/index.html
@@ -24,12 +24,28 @@
     </div>
 
     <!-- Rating Form -->
-    <form id="ramen-rating" data-id="insert ramen ID">
+    <form id="ramen-rating" data-id>
       <label for="rating">Rating: </label>
       <input type="text" name="rating" id="rating" value="Insert Rating Here" />
       <label for="comment">Comment: </label>
       <textarea name="comment" id="comment">Insert Comment Here</textarea>
       <input type="submit" value="Update" />
+      <button type="button" class = "delete">Delete Me!</button>
+    </form>
+
+    <form id="new-ramen">
+      <h4>Add New Ramen</h4>
+      <label for="name">Name: </label>
+      <input type="text" name="name" id="new-name" />
+      <label for="restaurant">Restaurant: </label>
+      <input type="text" name="restaurant" id="new-restaurant" />
+      <label for="image">Image: </label>
+      <input type="text" name="image" id="new-image" />
+      <label for="rating">Rating: </label>
+      <input type="number" name="rating" id="new-rating" />
+      <label for="new-comment">Comment: </label>
+      <textarea name="new-comment" id="new-comment">Insert Comment Here</textarea>
+      <input type="submit" value="Create" />
     </form>
 
   </body>
